updated the navbar by changing the client button to consultations button

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html +
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>IT Worker | responsive portfolio template</title>
+    <title>Virtual iTasks | responsive portfolio template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -35,7 +35,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a href="#intro" class="navbar-brand scrollTo">IT Worker</a>
+        <div class="container"><a href="#intro" class="navbar-brand scrollTo">Faith</a>
           <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
           <div id="navbarcollapse" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
@@ -44,7 +44,7 @@
               <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
               <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li>
               <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li>
-              <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li>
+             <li class="nav-item"><a href="https://www.virtualitasks.com/" target="_blank" class="nav-link link-scroll">CONSULTATIONS</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
             </ul>
           </div>
@@ -501,3 +501,6 @@
     <script src="js/front.js"></script>
   </body>
 </html>
+
+
+ <li class="nav-item"><a href="https://www.virtualitasks.com/" target="_blank" class="nav-link link-scroll">CONSULTATIONS</a></li>
