fixed the media queries

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         </header>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <form id="contact-form" method="post" action="">
+            <form id="contact-form" method="post" action="mailto:lyalpha2401@gmail.com">
               <div class="messages"></div>
               <div class="controls">
                 <div class="row">
@@ -499,6 +499,7 @@
     <script src="vendor/jquery.counterup/jquery.counterup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"> </script>
     <script src="js/front.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
   </body>
 </html>
 
